@@ -1,5 +1,5 @@
 Package: wanpipe
-Version: 7.0.19-0
+Version: 7.0.20-0
 Section: networking
 Priority: optional
 Architecture: all
