@@ -1,6 +1,6 @@
 %define WANPIPE_VER	  wanpipe-modules
 %define name              %{WANPIPE_VER}
-%define version           7.0.19
+%define version           7.0.20
 %define release           0
 %define	serial	 	  1
 %define MODULES_DIR	  /lib/modules
@@ -59,7 +59,12 @@ fi
 
 %changelog
 
-* May 9 2016 Nenad Corbic <ncorbic@sangoma.com> -  7.0.19
+* Mon May 19 2016 Nenad Corbic <ncorbic@sangoma.com> -  7.0.20
+==================================================================
+- Compilation fix in non-dahdi mode
+- Default to fe poll mode.
+
+* Mon May 9 2016 Nenad Corbic <ncorbic@sangoma.com> -  7.0.19
 ==================================================================
 - Add RM_RING_DEBOUNCE config option
 - Fix for Centos 5 build
@@ -70,7 +75,7 @@ fi
 - RM_FAKE_POLARITY_THRESHOLD should be 16000 
 
 
-* Mar 17 2016 Nenad Corbic <ncorbic@sangoma.com> -  7.0.18
+* Mon Mar 17 2016 Nenad Corbic <ncorbic@sangoma.com> -  7.0.18
 ==================================================================
 - Driver will start by default even though analog FXS/FXO module failed to configure.
   New config parameters: RM_FAIL_ON_MOD_ERROR=YES will revert this behaviour.
