@@ -1,7 +1,7 @@
 %define KERNEL_VERSION    %{?kern_ver}
 %define WANPIPE_VER	  wanpipe
 %define name              %{WANPIPE_VER}
-%define version           7.0.19
+%define version           7.0.20
 %define release           0
 %define	serial	 	  1
 %define UTILS_DIR 	  /usr/sbin
@@ -246,7 +246,12 @@ chmod 755 /usr/local/sbin/setup-sangoma
 
 %changelog
 
-* May 9 2016 Nenad Corbic <ncorbic@sangoma.com> -  7.0.19
+* Mon May 19 2016 Nenad Corbic <ncorbic@sangoma.com> -  7.0.20
+==================================================================
+- Compilation fix in non-dahdi mode
+- Default to fe poll mode.
+
+* Mon May 9 2016 Nenad Corbic <ncorbic@sangoma.com> -  7.0.19
 ==================================================================
 - Add RM_RING_DEBOUNCE config option
 - Fix for Centos 5 build
@@ -257,7 +262,7 @@ chmod 755 /usr/local/sbin/setup-sangoma
 - RM_FAKE_POLARITY_THRESHOLD should be 16000 
 
 
-* Mar 17 2016 Nenad Corbic <ncorbic@sangoma.com> -  7.0.18
+* Mon Mar 17 2016 Nenad Corbic <ncorbic@sangoma.com> -  7.0.18
 ==================================================================
 - Driver will start by default even though analog FXS/FXO module failed to configure.
   New config parameters: RM_FAIL_ON_MOD_ERROR=YES will revert this behaviour.
